# html-template-parser

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .releaserc  package-lock.json  package.json  pyproject.toml  readme.md  renovate.json  setup.cfg  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  release.yml  test.yml  update.yaml
HtmlTemplateParser/: __init__.py  attribute_parser.py  html_template_parser.py
tests/: test_ap.py  test_htp.py  test_htp_position_value.py
